--- a/styles.css
+++ b/styles.css
@@ -12,18 +12,13 @@ body {
   font-size: 1.4em;
 }
 
-
-
 .carousel-inner img {
   width: 100%;
   max-height: 80vh;
   object-fit: cover;
 }
 
-
-
 /* SLIDING SECTION */
-
 
 .slide-section h1 {
   font-size: 3rem;
@@ -63,8 +58,8 @@ body {
 
 /* Offcanvas Menu */
 .offcanvas {
-  background-color: #000;
-  color: white;
+  background-color: black !important;
+  color: white !important;
 }
 
 .menu-nav {
@@ -74,7 +69,7 @@ body {
 }
 
 .ham {
-  background-color: black;
+  background-color: black !important;
 }
 
 .content-section {
