--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,72 @@ body {
   border-radius: 10px;
 }
 
+
+/* ARTIST DESIGN */
+
+.artistbody {
+  background-color: #000;
+}
+
+#artists {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.card img {
+  border-radius: 10px;
+  height: 300px;
+  object-fit: cover;
+}
+.card-body {
+background-color: #000;
+border-bottom-right-radius: 15px;
+border-bottom-left-radius: 15px;
+
+}
+
+#listen {
+  background-color: #000;
+  padding: 7px;
+  padding-right: -6px;
+  padding-left: -6px;
+  outline: 1px solid white;
+  border-radius: 5px;
+}
+
+#listen a {
+  text-decoration: none;
+}
+
+#listen:hover {
+  background-color: #f00;
+  scale: 1.1;
+  color: white;
+  outline: 1px solid #f00;
+
+}
+
+.col-md-4 mb-4 {
+  border-radius: 30px;
+}
+
+#artist1 {
+border-radius: 25px;
+}
+.card {
+  transition: transform 0.3s ease-in-out;
+  color: white;
+}
+.card:hover {
+  transform: scale(1.05);
+  /* color: white; */
+}
+
+
+
+
+
+
 /* Responsive Adjustments */
 @media (max-width: 991px) {
   .logo {
