--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 body {
   color: white;
+  background-color: #000;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 .artistbody {
+  color: white;
+  background-color: #000;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -22,6 +25,8 @@ body {
   width: 100%;
   max-height: 80vh;
   object-fit: cover;
+  /* border-bottom: 5px solid limegreen; */
+  box-shadow: 0 20px red;
 }
 
 /* SLIDING SECTION */
@@ -46,14 +51,12 @@ body {
 /* NAVIGATION */
 .navbar {
   background-color: #000;
-  
 }
 .navbar-brand {
   font-weight: bold;
   display: flex;
   align-items: center;
   margin-left: -6%;
-  
 }
 
 /* Navigation Links */
@@ -66,8 +69,14 @@ body {
 }
 
 #nav-bar:hover {
-  margin-top: 0.30%;
+  margin-top: 0.3%;
 }
+
+.nav-link:active {
+  color: white;
+  border-bottom: 3px solid #fff;
+}
+
 .nav-link:hover {
   text-decoration: none;
   color: #f00 !important;
@@ -98,7 +107,6 @@ body {
   border-radius: 10px;
 }
 
-
 /* ARTIST DESIGN */
 
 .artistbody {
@@ -116,10 +124,33 @@ body {
   object-fit: cover;
 }
 .card-body {
-background-color: #000;
-border-bottom-right-radius: 10px;
-border-bottom-left-radius: 10px;
+  background-color: #000;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
 
+#card-body1 {
+  background-color: #000;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#mymusic {
+  outline: 4px solid white;
+  scale: 0.9;
+}
+
+#mymusic:hover {
+  box-shadow: 0 0 30px #0f0;
+}
+
+#myMusic {
+  outline: 5px solid white;
+  scale: 0.92;
+}
+
+#myMusic:hover {
+  box-shadow: 0 0 30px #0f0;
 }
 
 #listen {
@@ -136,11 +167,13 @@ border-bottom-left-radius: 10px;
 }
 
 #listen:hover {
-  background-color: #f00;
+  background-color: rgb(3, 128, 3);
   scale: 1.1;
   color: white;
-  outline: 1px solid #f00;
+}
 
+#listen1 {
+  text-decoration: none;
 }
 
 .col-md-4 mb-4 {
@@ -148,26 +181,57 @@ border-bottom-left-radius: 10px;
 }
 
 #artist1 {
-border-radius: 25px;
+  border-radius: 25px;
 }
 .card {
   transition: transform 0.3s ease-in-out;
   color: white;
 }
 .card:hover {
-  transform: scale(1.05);
-  /* color: white; */
+  transform: scale(1.08);
 }
 
+/* Top Releases */
 
+.rel {
+  margin-top: 3%;
+  margin-bottom: 5%;
+  margin-left: 1.5%;
+  padding: 10px;
+  background-color: #f00;
+  margin-right: 60%;
+}
 
+.rel1 {
+  scale: 1.08;
+  margin-left: 4%;
+  margin-right: 4%;
+}
 
+.rel2 {
+  background-color: #000;
+  margin-right: 9%;
+  padding-left: 4%;
+}
 
+.rel-pic {
+  margin-left: 3%;
+  margin-bottom: 5%;
+  width: 20vw;
+}
 
 /* Responsive Adjustments */
 @media (max-width: 991px) {
   .logo {
     width: 20vw; /* Adjust logo size for mobile and tablets */
+  }
+
+  #mymusic {
+    scale: 0.9;
+  }
+
+  .rel {
+    display: flex;
   }
 
   .navbar-brand {
@@ -198,7 +262,6 @@ border-radius: 25px;
     display: none;
   }
 
-
   .offcanvas {
     display: none !important;
   }
@@ -211,15 +274,12 @@ border-radius: 25px;
   .navbar-brand {
     margin-left: -2.5%;
   }
-
-
 }
 
 @media (min-width: 1024px) and (max-width: 1440px) {
   .navbar-brand {
     margin-left: -4.5%;
   }
-
 }
 
 @media (min-width: 1440px) and (max-width: 2560px) {
@@ -227,5 +287,4 @@ border-radius: 25px;
     display: flex;
     justify-content: space-between;
   }
-
 }
