--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  
 }
 .card img {
   border-radius: 5px;
@@ -142,15 +143,16 @@ body {
 
 #mymusic:hover {
   box-shadow: 0 0 30px #0f0;
+  
 }
 
 #myMusic {
-  outline: 5px solid white;
+  outline: 2px solid #fff;
   scale: 0.92;
 }
 
 #myMusic:hover {
-  box-shadow: 0 0 30px #0f0;
+  box-shadow: 0 0 20px #0f0;
 }
 
 #listen {
@@ -188,7 +190,7 @@ body {
   color: white;
 }
 .card:hover {
-  transform: scale(1.08);
+  transform: scale(1.09);
 }
 
 /* Top Releases */
@@ -220,6 +222,93 @@ body {
   width: 20vw;
 }
 
+
+/* RELSEASE */
+
+
+.title {
+  display: flex;
+}
+
+
+
+.btn1 {
+  margin-top: 8%;
+  scale: 1.3;
+  background-color: red;
+  color: white;
+}
+
+.btn2 {
+  margin-top: 8%;
+  scale: 1.3;
+  margin-left: 15%;
+  background-color: green;
+  color: white;
+}
+
+.pic {
+  margin-top: 5%;
+  /* margin-left: -2%; */
+}
+.art {
+  width: 80vh;
+  scale: 50%;
+  /* margin-top: -30%; */
+}
+
+.menu-nav {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.ham {
+  background-color: black !important;
+}
+
+.content-section {
+  padding: 50px 20px;
+}
+
+.btn1 a {
+  text-decoration: none;
+  color: #fff;
+}
+
+
+/* DOWNLOAD */
+/* .art {
+  margin-top: -24%;
+  margin-left: 10%;
+} */
+
+.artwork1 {
+  width: 130vh;
+  margin-top: -80%;
+  margin-bottom: 27%;
+  
+}
+
+#audiomack {
+  padding-top: 20%;
+}
+
+.mtext {
+  margin-top: -13%;
+  text-align: justify;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+
+.myaudio {
+  scale: 1.2;
+  margin-left: 12%;
+  margin-top: 12%;
+  margin-bottom: 4%;
+  margin-right: 50%;
+
+}
 /* Responsive Adjustments */
 @media (max-width: 991px) {
   .logo {
@@ -232,6 +321,7 @@ body {
 
   .rel {
     display: flex;
+    flex-direction: column;
   }
 
   .navbar-brand {
