--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  
 }
 .card img {
   border-radius: 5px;
@@ -143,7 +142,6 @@ body {
 
 #mymusic:hover {
   box-shadow: 0 0 30px #0f0;
-  
 }
 
 #myMusic {
@@ -222,15 +220,11 @@ body {
   width: 20vw;
 }
 
-
 /* RELSEASE */
-
 
 .title {
   display: flex;
 }
-
-
 
 .btn1 {
   margin-top: 8%;
@@ -276,7 +270,6 @@ body {
   color: #fff;
 }
 
-
 /* DOWNLOAD */
 /* .art {
   margin-top: -24%;
@@ -287,7 +280,6 @@ body {
   width: 130vh;
   margin-top: -80%;
   margin-bottom: 27%;
-  
 }
 
 #audiomack {
@@ -301,13 +293,73 @@ body {
   margin-left: 1%;
 }
 
+#myhero {
+  position: fixed;
+  width: 100%;
+  z-index: 10000;
+  margin-top: -9%;
+}
+
 .myaudio {
-  scale: 1.2;
-  margin-left: 12%;
-  margin-top: 12%;
+  /* scale: 1.2; */
+  margin-left: 4%;
+  margin-top: 9%;
+  width: 60%;
   margin-bottom: 4%;
   margin-right: 50%;
+}
 
+#downbtn {
+  background-color: rgb(1, 184, 1);
+  color: white;
+  scale: 1.2;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: 2%;
+}
+
+
+#services {
+  display: flex;
+  gap: 2rem;
+  padding: 10px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#services img {
+  max-width: 100%;
+  border-radius: 20px;
+}
+
+@media (max-width: 768px) {
+  .myaudio {
+    width: 100%;
+    padding-left: 1%;
+    margin-top: 22%;
+    margin-bottom: 0%;
+    padding-right: 1%;
+    margin-left: 0%;
+  }
+
+  body {
+    background-color: #000;
+  }
+
+  #downbtn {
+    background-color: rgb(1, 184, 1);
+    color: white;
+    scale: 1.2;
+    padding: 20px;
+    border-radius: 20px;
+  }
+
+  #myhero {
+    position: fixed;
+    width: 100%;
+    z-index: 10000;
+    margin-top: -22%;
+  }
 }
 /* Responsive Adjustments */
 @media (max-width: 991px) {
