--- a/styles.css
+++ b/styles.css
@@ -721,7 +721,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   scale: 1.3;
-  margin-bottom: -5%;
+  padding-bottom: -5%;
 }
 
 #login input {
@@ -788,6 +788,7 @@ body {
   margin-top: -50px;
   border-radius: 50%;
   box-shadow: 0 2px 5px rgba(255, 0, 0, 0.2);
+  margin-bottom: -10%;
 }
 
 .popup h2 {
